2008-04-15	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* ica/ica.qrc:
	* ica/resources/sk.qm:
	* ica/resources/sk.ts:
	* setup/setup.qrc:
	* setup/resources/sk.ts:
	* setup/resources/sk.qm:
	* ima/italc.qrc:
	* ima/resources/pl.qm:
	* ima/resources/sk.ts:
	* ima/resources/sk.qm:
	* ima/resources/pl.ts:
	* lib/italc_core.qrc:
	* lib/resources/sk.ts:
	* lib/resources/sk.qm:
	added Slovakian localization-files by Jan Valuska
	<jvaluska/at/gymzv8rocne/dot/edu/dot/sk>

	* ima/src/main.cpp:
	fixed loading of country-specific localizations

2008-04-11	Andrei Krueger	<anc/at/iki/dot/fi>

	* classroom_manager.cpp:
	* classroom_manager.h:
	Fixed removing of child classroom (closes #1936559)
	Improved addClassRoom.

2008-04-11	Andrei Krueger	<anc/at/iki/dot/fi>

	* ima/dialogs/client_settings.ui:
	* ima/src/main_window.h:
	* ima/src/dialogs.cpp:
	* ima/src/client.h:
	* ima/src/main_window.cpp:
	* ima/src/client.cpp:
	* ima/src/classroom_manager.cpp:
	Name (nickname) of the client is now optional,
	hostname (ip) is used as default (closes #1886578)

2008-04-03	Andriano Rino <rino-andr/at/users/dot/sourceforge/dot/net>

	* ima/resources/it.qm:
	* ima/resources/it.ts:
	updated Italian localization

2008-04-03	Andrei Krueger	<anc/at/iki/dot/fi>

	* ima/src/classroom_manager.cpp:
	drag'n'drop workaround for Qt bug #155700 (Qt < 4.3.4)

2008-04-02	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* lib/src/isd_connection.cpp:
	made readFromServer() have a timeout - fixes hung processes/threads on
	blocked connections (closes #1924390)

	* lib/src/ivs_connection.cpp:
	fill screen and scaled screen with black

	* ima/src/client.cpp:
	improved client-thread-destruction

	* ima/src/main_window.cpp:
	improved button-texts

	* ima/src/classroom_manager.cpp:
	* ima/src/classroom_manager.h:
	- removed obsolete functions
	- small optimizations by not using foreach

	* ica/src/system_service.cpp:
	use QString::toLocal8Bit() instead of QString::toUtf8() - hopefully